# sysrepo-plugin-dt-network

./: CMakeLists.txt
CMakeModules/: FindLIBUBOX.cmake
network_scripts/: get_eth0.sh  get_eth0_enabled.sh  get_eth0_forwarding.sh  get_eth0_ip.sh  get_eth0_mac.sh  get_eth0_mtu.sh  get_eth0_netmask.sh  get_eth0_origin.sh  get_eth0_rx.sh  get_eth0_rx_err.sh  get_eth0_speed.sh  get_eth0_throughput.sh  get_eth0_tx.sh  get_eth0_tx_err.sh  router.sh  status.sh
src/: common.h  functions.c  functions.h  network.c  network.h  scripts.h
